Add proper formatting for email and phone input fields

--- a/static/styles_m3.css
+++ b/static/styles_m3.css
@@ -447,6 +447,8 @@ body {
 
 input[type="text"],
 input[type="number"],
+input[type="email"],
+input[type="tel"],
 textarea,
 select {
     width: 100%;
