--- a/templates/index.html
+++ b/templates/index.html
@@ -19,6 +19,7 @@
                 <li><a href="/add">Add Student</a></li>
                 <li><a href="/stats">Statistics</a></li>
                 <li><a href="/command">Commands</a></li>
+                <li><a href="/import">Import Excel</a></li>
                 <li>
                     <button id="theme-toggle" class="theme-toggle" onclick="toggleDarkMode()" title="Toggle dark mode">
                         <span class="material-symbols-outlined">dark_mode</span>
