--- a/templates/add_student.html
+++ b/templates/add_student.html
@@ -21,6 +21,7 @@
                 <li><a href="/add" class="active">Add Student</a></li>
                 <li><a href="/stats">Statistics</a></li>
                 <li><a href="/command">Commands</a></li>
+                <li><a href="/import">Import Excel</a></li>
                 <li>
                     <button id="theme-toggle" class="theme-toggle" onclick="toggleDarkMode()" title="Toggle dark mode">
                         <span class="material-symbols-outlined">dark_mode</span>
